--- a/man/vps.conf.5
+++ b/man/vps.conf.5
@@ -1,7 +1,7 @@
-.\" $Id: vps.conf.5,v 1.1.2.11 2005/09/26 14:58:18 igor Exp $
+.\" $Id: vps.conf.5,v 1.1.2.12 2005/10/17 11:42:41 igor Exp $
 .TH vps.conf 5 "10 Aug 2005" "OpenVZ" "Virtual Private Server"
 .SH NAME
-vps.conf \- configuration file for a Virtual Private Server
+vps.conf \- configuration file for a Virtual Private Server.
 .SH SYNOPSIS
 /etc/sysconfig/vz-scripts/XXX.conf
 .SH DESCRIPTION
