--- a/man/vzcfgvalidate.8
+++ b/man/vzcfgvalidate.8
@@ -1,7 +1,7 @@
-.\" $Id: vzcfgvalidate.8,v 1.5.10.5 2005/09/26 14:58:18 igor Exp $
+.\" $Id: vzcfgvalidate.8,v 1.5.10.6 2005/10/17 11:42:42 igor Exp $
 .TH vzcfgvalidate 8 "10 Aug 2005" "OpenVZ" "Virtual Private Server"
 .SH NAME
-vzcfgvalidate \- utility to validate VPS config file
+vzcfgvalidate \- validate the VPS configuration file
 .SH SYNOPSIS
 vzcfgvalidate [\fB-r\fR | \fB-i\fR] \fIconfigfile\fR
 .SH OPTIONS
