--- a/man/vzpid.8
+++ b/man/vzpid.8
@@ -1,16 +1,16 @@
-.\" $Id: vzpid.8,v 1.4.10.3 2005/09/26 14:58:18 igor Exp $
+.\" $Id: vzpid.8,v 1.4.10.4 2005/10/17 11:42:42 igor Exp $
 .TH vzpid 8 "10 Aug 2005" "OpenVZ" "Virtual Private Server"
 .SH NAME
-vzpid \- displays VPS id by process id.
+vzpid \- display the VPS id given the process id (pid).
 .SH SYNOPSIS
 vzpid [\fB-h\fR] [\fIpid\fR [...]]
 .SH DESCRIPTION
-This script displays VPS id the process with the given \fIid\fR belongs to.
+This script displays the VPS id the process with the given \fIid\fR belongs to.
 .SH OPTIONS
 .IP \fIpid\fR
-The \fIpid\fR of the process to display VPS id of.
+The \fIpid\fR of the process to display the VPS id of.
 .SH RETURN CODE
-Returns 0 upon success.
+Returns 0 upon a successful execution.
 .SH SEE ALSO
 .BR vzctl (8).
 .SH LICENSE
