--- a/man/vzcpucheck.8
+++ b/man/vzcpucheck.8
@@ -1,11 +1,11 @@
-.\" $Id: vzcpucheck.8,v 1.4.10.3 2005/09/26 14:58:18 igor Exp $
+.\" $Id: vzcpucheck.8,v 1.4.10.4 2005/10/17 11:42:42 igor Exp $
 .TH vzcpucheck 8 "10 Aug 2005" "OpenVZ" "Virtual Private Server"
 .SH NAME
-vzcpucheck \- shows information about CPU power and utilization.
+vzcpucheck \- shows information about the CPU power and utilization.
 .SH SYNOPSIS
 vzcpucheck [\fI-v\fR]
 .SH DESCRIPTION
-This script shows information about CPU power and utilization. 
+This script outputs information on the CPU power and utilization.
 .SH OPTIONS
 .IP \fB-v\fR 
 Display information for each VPS.
