*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ vzctl (2.7.0)
 
     2.7.0-23: Mon Oct 10 2005 <igor@sw.ru>
 	vzctl:
+	* fixes in gentoo network setup <Benedikt Boehm hollow@gentoo.org>
 	* fixed enter (handle EAGAIN in write())
 	* fixes in 2level quota setup (use syscal mknod() for device creation)
 	* added -fPIC flag for build under x86_64
