*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 vzctl (2.7.0)
-   2.7.0-25
+   2.7.0-25: Thu Dec 29 2005 <igor@sw.ru>
 	* setup loopback for debian
 	* skip fairsched setup if not supported
 	* do VPS umount in loop untill EINVAL
@@ -8,7 +8,7 @@ vzctl (2.7.0)
 	* fixed destroy in case VPS private area is not a directory
 	* increased parameters in VPS samples:
 		kmemsize *= 1.2, numfiles *= 1.6 dcachesize *= 2 
-	* load iptables modules form /etc/init.d/vz
+	* load iptables modules from /etc/init.d/vz
 	* do preload libnss on enter action
     2.7.0-24: Fri Oct 28 2005 <igor@sw.ru>
 	* set proc title as 'vzctl: ttyname' on enter
