--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 vzctl (2.7.0)
    2.7.0-26: Tue Jan 17 2006 <igor@sw.ru>
 	* fixed OpenVZ startup under SuSE
-	* fixed buffer overwlow in vzlist
+	* fixed buffer overflow in vzlist
    2.7.0-25: Thu Dec 29 2005 <igor@sw.ru>
 	* setup loopback for debian
 	* skip fairsched setup if not supported
