put_param3() can incorrectly set $name=( "" ) Noticed by <jstubbs@gentoo.org> Fixed compilation against 2.6.15 kernel <kir@sw.ru>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 vzctl (2.7.0)
+   3.0.0-3: Thu Mar  2 2006 <igor@sw.ru>
+	* put_param3() can incorrectly set $name=( "" ) <jstubbs@gentoo.org>
+	* fixed compilation against 2.6.15 kernel <kir@sw.ru>
    3.0.0-2: Thu Feb 23 2006 <igor@sw.ru>
 	* fixed VPS start on old kernel (witthout feature_mask support)	
    3.0.0-1: Wed Feb 22 2006 <igor@sw.ru>
