--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,15 @@
-vzctl (2.7.0)
+   3.0.0-4: Fri Mar 10 2006 <kir@openvz.org>
+	* cron scripts do nothing if VZ is not loaded (bug #107)
+	* cosmetic vzctl.8 man page fixes
    3.0.0-3: Thu Mar  2 2006 <igor@sw.ru>
-	* put_param3() can incorrectly set $name=( "" ) <jstubbs@gentoo.org>
-	* fixed compilation against 2.6.15 kernel <kir@sw.ru>
+	* put_param3() can incorrectly set $name=( "" ) (bug #111).
+		Thanks to <jstubbs@gentoo.org>
+	* fixed compilation against old kernels (>= 022stab070)
+	* description of set parameter suffixes (K, M, G, P) added to vzctl.8 
+		man page (bug #105)
+	* vpsnetclean and vpsreboot scripts do nothing if VZ is not loaded
+		(bug #107)
+	* fixed gentoo-add_ip.sh script (bug #110)
    3.0.0-2: Thu Feb 23 2006 <igor@sw.ru>
 	* fixed VPS start on old kernel (witthout feature_mask support)	
    3.0.0-1: Wed Feb 22 2006 <igor@sw.ru>
