--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -1,4 +1,4 @@
-.\" $Id: vzctl.8,v 1.131.10.16 2006/03/10 13:23:56 kir Exp $
+.\" $Id: vzctl.8,v 1.131.10.17 2006/03/16 13:56:02 kir Exp $
 .TH vzctl 8 "10 Aug 2005" "OpenVZ" "Virtual Private Server"
 .SH NAME
 vzctl \- utility to control Virtual Private Server.
@@ -274,7 +274,8 @@ You can use the following values for \fIname\fR:
 \fIipt_TCPMSS\fR, \fIipt_tcpmss\fR, \fIipt_ttl\fR, \fIipt_LOG\fR,
 \fIipt_length\fR, \fIip_conntrack\fR, \fIip_conntrack_ftp\fR,
 \fIip_conntrack_irc\fR, \fIipt_conntrack\fR, \fIipt_state\fR,
-\fIipt_helper\fR, \fIiptable_nat\fR, \fIip_nat_ftp\fR, \fIip_nat_irc\fR.
+\fIipt_helper\fR, \fIiptable_nat\fR, \fIip_nat_ftp\fR, \fIip_nat_irc\fR,
+\fIipt_REDIRECT\fR.
 .TP
 \fBNetwork devices control parameters\fR
 .IP "\fB--netdev_add\fR \fIname\fR"
