--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* set personality PER_LINUX32 on x86_64 arch for i386 VPSes
 	* fixed --iptables store (do not store dependent modules)
 	* skip unknown iptables modules in config
  	* set arg[0] = "-bash" on enter
