Fixed a minor typo

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -352,7 +352,7 @@ is used.
 \fBrestore\fR <\fIvpsid\fR> \fB[--dumpfile <name>]\fR
 This command restore VPS from dump file created by \fBchkpnt\fR command.
 .SS Performing VPS actions
-.IP "\fBcreate\fR \fIvpsid\fR \fB--ostemlate\fR \fIname\fR] [\fB--config\fR \fIname\fR] [\fB--private\fR \fIpath\fR] [\fB--root\fR \fIpath\fR]" 4
+.IP "\fBcreate\fR \fIvpsid\fR \fB--ostemplate\fR \fIname\fR] [\fB--config\fR \fIname\fR] [\fB--private\fR \fIpath\fR] [\fB--root\fR \fIpath\fR]" 4
 Creates VPS area. This operation should be done once, before the first
 startup of VPS.
 
