Fixed license in man pages.
Fixed date in vzctl(8) and vzmigrate(8) man pages.

--- a/man/vz.5
+++ b/man/vz.5
@@ -70,4 +70,4 @@ other VPS-related parameters in per-VPS configuration files.
 .BR vzctl (8),
 .BR vps.conf (5).
 .SH LICENSE
-Copyright (C) 2000-2005, SWsoft. Licensed under QPL.
+Copyright (C) 2000-2006, SWsoft. Licensed under GNU GPL.
