--- a/man/vzcfgvalidate.8
+++ b/man/vzcfgvalidate.8
@@ -24,4 +24,4 @@ If validation failed exit status is 2.
 .SH SEE ALSO
 .BR vps.conf (5).
 .SH LICENSE
-Copyright (C) 2000-2005, SWsoft. Licensed under QPL.
+Copyright (C) 2000-2006, SWsoft. Licensed under GNU GPL.
