--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -1,5 +1,5 @@
 .\" $Id: vzctl.8,v 1.131.10.18 2006/04/05 14:26:53 igor Exp $
-.TH vzctl 8 "10 Aug 2005" "OpenVZ" "Virtual Private Server"
+.TH vzctl 8 "18 Apr 2006" "OpenVZ" "Virtual Private Server"
 .SH NAME
 vzctl \- utility to control Virtual Private Server.
 .SH SYNOPSIS
@@ -472,4 +472,4 @@ To permanently remove this VPS:
 .BR vps.conf (5),
 .BR vzquota (8),
 .SH LICENSE
-Copyright (C) 2000-2005, SWsoft. Licensed under QPL.
+Copyright (C) 2000-2006, SWsoft. Licensed under GNU GPL v2.
