--- a/man/vzsplit.8
+++ b/man/vzsplit.8
@@ -26,5 +26,5 @@ returns 1.
 .SH SEE ALSO
 .BR vps.conf (5).
 .SH LICENSE
-Copyright (C) 2000-2005, SWsoft. Licensed under QPL.
+Copyright (C) 2000-2006, SWsoft. Licensed under GNU GPL.
 
