--- a/man/arpsend.8
+++ b/man/arpsend.8
@@ -61,4 +61,4 @@ not \fBLOOPBACK\fR flags in interface parameters).
 .SH SEE ALSO
 .BR vzctl (8),
 .SH LICENSE
-Copyright (C) 2000-2005, SWsoft. Licensed under QPL.
+Copyright (C) 2000-2006, SWsoft. Licensed under GNU GPL.
