--- a/man/ve-veconfig.5
+++ b/man/ve-veconfig.5
@@ -35,4 +35,4 @@ will be printed by \fBvzctl\fR.
 .BR vzctl (8),
 .BR resolv.conf (5).
 .SH COPYRIGHT
-Copyright (C) 2001, SWsoft.
+Copyright (C) 2001-2006, SWsoft. Licensed under GNU GPL.
