--- a/man/vps.conf.5
+++ b/man/vps.conf.5
@@ -109,4 +109,4 @@ are divided by spaces.
 .BR vzctl (8),
 .BR vz (5).
 .SH LICENSE
-Copyright (C) 2001-2005 by SWsoft.
+Copyright (C) 2001-2006 by SWsoft. Licensed under GNU GPL.
