--- a/man/vzcalc.8
+++ b/man/vzcalc.8
@@ -31,4 +31,4 @@ standard memory allocations made for applications in a VPS. This is a more "virt
 .SH DIAGNOSTICS
 Normally, the exit status is 0. On error, the exit status is 1.
 .SH LICENSE
-Copyright (C) 2000-2005, SWsoft. Licensed under QPL.
+Copyright (C) 2000-2006, SWsoft. Licensed under GNU GPL.
