--- a/man/vzcpucheck.8
+++ b/man/vzcpucheck.8
@@ -14,4 +14,4 @@ Returns 0 upon success.
 .SH SEE ALSO
 .BR vzctl (8).
 .SH LICENSE
-Copyright (C) 2000-2005, SWsoft. Licensed under QPL.
+Copyright (C) 2000-2006, SWsoft. Licensed under GNU GPL.
