--- a/man/vzlist.8
+++ b/man/vzlist.8
@@ -171,4 +171,4 @@ cpuunits	CPUUNI
 .SH RETURN CODE
 Returns 0 upon success.
 .SH COPYRIGHT
-Copyright (C) 2000-2005, SWsoft. Licensed under QPL.
+Copyright (C) 2000-2006, SWsoft. Licensed under GNU GPL.
