--- a/man/vzmemcheck.8
+++ b/man/vzmemcheck.8
@@ -21,4 +21,4 @@ the numerator and the denominator of the corresponding fraction.
 .SH DIAGNOSTICS
 Normally, exit status is 0. On error, exit status is 1.
 .SH LICENSE
-Copyright (C) 2000-2005, SWsoft. Licensed under QPL.
+Copyright (C) 2000-2006, SWsoft. Licensed under GNU GPL.
