--- a/man/vzmigrate.8
+++ b/man/vzmigrate.8
@@ -1,4 +1,4 @@
-.TH vzmigrate 8 "April 2006" "OpenVZ" "Virtual Private Servers"
+.TH vzmigrate 8 "17 April 2006" "OpenVZ" "Virtual Private Servers"
 
 .SH NAME
 vzmigrate - utility for virtual environment migration between hardware nodes.
@@ -100,4 +100,4 @@ Operation with VPS quota failed.
 .BR rsync (1)
 
 .SH COPYRIGHT
-Copyright (C) 2001-2006, SWsoft. Licensed under GNU GPL v2.
+Copyright (C) 2001-2006, SWsoft. Licensed under GNU GPL.
