Changed directory structure. /etc/sysconfig/vz-scripts -> /etc/vz/conf /etc/sysconfig/vz-scripts/dists -> /etc/vz/dists /etc/sysconfig/vz -> /etc/vz/vz.conf

--- a/man/vps.conf.5
+++ b/man/vps.conf.5
@@ -3,10 +3,10 @@
 .SH NAME
 vps.conf \- configuration file for a Virtual Private Server.
 .SH SYNOPSIS
-/etc/sysconfig/vz-scripts/XXX.conf
+/etc/vz/conf/XXX.conf
 .SH DESCRIPTION
 This is a configuration file for a VPS. It is stored as
-\fB/etc/sysconfig/vz-scripts/\fR\fIXXX\fB.conf\fR, where \fIXXX\fR
+\fB/etc/vz/conf/\fR\fIXXX\fB.conf\fR, where \fIXXX\fR
 is the ID of the given VPS.
 .PP
 Configuration file consists of lines in the form
