--- a/man/vzsplit.8
+++ b/man/vzsplit.8
@@ -16,7 +16,7 @@ Specify the number of VPSs.
 .TP
 \fB-f\fR \fIconf_name\fR
 Specify the configuration file name. The program output is placed to
-/etc/sysconfig/vz-scripts/ve-\fIconf_name\fR.conf-sample.
+/etc/vz/conf/ve-\fIconf_name\fR.conf-sample.
 .TP
 \fB-s\fR \fIswapsize\fR
 Specify the swap size in Kbytes. If not provided in the option, the swap size will be read from /proc/meminfo.
