Added suffixes G,M,K support for --diskspace option

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -288,6 +288,8 @@ delete network device from specified VPS
 \fB--diskspace\fR \fInum\fR[:\fInum\fR]
 sets soft and hard disk quotas, in blocks. First parameter is soft quota,
 second is hard quota. One block is currently equal to 1Kb.
+Also suffixes  \fBG\fR, \fBM\fR, \fBK\fR can be specified
+(see \fBResource limits\fR section for more info).
 .TP
 \fB--diskinodes\fR \fInum\fR[:\fInum\fR]
 sets soft and hard disk quotas, in i-nodes. First parameter is soft quota,
