Added --cpus description

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -273,6 +273,8 @@ You can set CPU weight for VPS0 (hardware node itself) as well
 Limit of CPU usage for the VPS, in per cent.
 Note if the computer has 2 CPUs, it has total of 200% CPU time. Default CPU
 limit is 0 (no CPU limit).
+\fB--cpus\fR \fInum\fR
+sets number of CPUs available in the VPS.
 .TP
 \fBMemory output parameters\fR
 This parameter control output of /proc/meminfo inside VPS
