Added --name description to vzctl.8

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -66,6 +66,9 @@ Note that VPS area should be created before using this option.
 \fB--disabled\fR \fIyes\fR|\fIno\fR
 Disable VPS start. For force start disabled VPS option \fI--force\fR can be used.
 .TP
+\fB--name\fR \fIname\fR
+Bind VE with \fIname\fR that name can be used for VE actions insted of \fIveid\fR.
+.TP
 \fBNetwork related parameters\fR
 .TP
 \fB--ipadd\fR \fIaddr\fR
